[fix] modal 스택 순서(z-index) 수정

--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -5,6 +5,7 @@
   position: fixed;
   width: inherit;
   height: 100%;
+  z-index: 200;
 }
 
 .modal-contents {
